--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,50 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
-.nav {
+
+.dropbtn {
+  background-color: #666666;
+  color: #fff;
+  padding: 50px;
+  font-size: 50px;
+  border: none;
+}
+
+.dropdown {
+  position: absolute;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: middle;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #9e9e9e;}
+
+
+h1 {
+  padding-top: 250px;
+  color: #fff;
+  text-align: center;
+}
+
+/*.nav {
   position: absolute;
 }
 
@@ -20,6 +63,7 @@ body {
   height: 2rem;
   background-color: #333333;
   padding: 14px 16px;
+  padding-bottom: 50px
 }
 
 #nav a {
@@ -28,9 +72,20 @@ body {
   text-decoration: none;
   padding-right: 5rem;
   color: #fff;
+}*/
+
+#biggertext{
+  font-size: 80px;
+  text-align: center;
+  color: #fff;
+  padding-top: 100px;
 }
 
-
+#bigtext {
+  font-size: 50px;
+  text-align: center;
+  color: #fff;
+}
 
 #titleBanner {
   /* border-radius: 90px; */
@@ -43,6 +98,7 @@ body {
   /*background-image: none; /* url(https://images.unsplash.com/photo-1619535860434-ba1d8fa12536?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1496&q=80); */
   background-position: center center;
   /* box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.7); */
+  
 }
 
 #titleBanner h1 {
@@ -144,7 +200,6 @@ ul, ol {
 #footer a {
   text-align: center;
   color: #fff;
-  padding-top: 400px;
 }
 
 @media screen and (orientation: portrait) {
